fix (ui): add horizontal scrolling on app workflow (#790)

--- a/ui/src/app/views/application/show/application.scss
+++ b/ui/src/app/views/application/show/application.scss
@@ -3,6 +3,10 @@
   flex-direction: column;
   align-content: stretch;
   height: 100%;
+
+  .scrollingContent {
+    overflow-x: auto;
+  }
 }
 
 .workflow {
